More secure refferer header

--- a/packages/twenty-front/index.html
+++ b/packages/twenty-front/index.html
@@ -13,6 +13,7 @@
     <link rel="manifest" href="/manifest.json" />
 
     <meta name="theme-color" content="#000000" />
+    <meta name="referrer" content="same-origin" />
     <meta name="description" content="A modern open-source CRM" />
     <meta
       property="og:image"
